<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_round"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_subjects"
        android:textColor="#2196F3"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/make_a_donation" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/dialog_note"
        android:textColor="#2196F3"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:cardCornerRadius="18dp"
        tools:ignore="MissingConstraints">


        <Button
            android:id="@+id/btn_acpt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#2196F3"
            android:text="@string/dialog_buttn"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>
