<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#2196F3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:padding="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/termsofuse"
                android:textColor="#ffffff"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:justificationMode="inter_word"
                android:text="@string/pravicynote"
                android:textColor="#ffffff"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />


            <TextView
                android:gravity="center"
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="120dp"
                android:background="#ffffff"
                android:text="@string/ourwebsite"
                android:textColor="#2196F3"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="260dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="15dp"
            tools:ignore="MissingConstraints">


            <Button
                android:id="@+id/btn_acpt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ffffff"
                android:text="@string/accept"
                android:textColor="#2196F3"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

