<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/flat_donate"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/label_crypto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/select_crypt"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_crypto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3" />

            </LinearLayout>



            <TextView
                android:layout_marginTop="30dp"
                android:id="@+id/label_network"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="start"
                android:text="@string/select_netwo"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinner_network"
                    android:backgroundTint="#2196F3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageView
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/qrcode"
                android:layout_width="match_parent"
                android:layout_height="140dp" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_txt"
                    android:gravity="center"
                    android:textColor="#2196F3"
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"
                    android:text=""
                />

                <ImageView
                    android:id="@+id/copyimg"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:src="@drawable/copy"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donate_notice"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
